[package]
name = "stream-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "s3_service"
path = "src/lib.rs"

[dependencies]
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
tokio = { version = "1.20.1", features = ["full"] }
bytes = "0.4.12"
http = "0.2.8"
http-body = "0.4.5"
md-5 = "0.10.1"
rand = "0.5.0"
thiserror = "1.0"
tokio-stream = "0.1.8"
tracing = "0.1.37"
